--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
 
     <script src="js/welcome.js"></script>
+    <script src="js/feel.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
