--- a/main.html
+++ b/main.html
@@ -7,9 +7,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="welcome_all_body">
-    <script src="js/welcome.js"></script>
-    <script src="js/feel.js"></script>
+  <body class="main_body main_body_backgroud">
+    <div class="main_backgroud">
+      <div class="main_high">
+        <div class="main_high-box-common main_high-profile-box"></div>
+        <div class="main_high-box-common main_high-time-day-box"></div>
+        <div class="main_high-box-common main_high-music-box"></div>
+      </div>
+      <div class="main_middle"></div>
+      <div class="main_low">
+        <div class="main_low-box-common main_low-left-box"></div>
+        <div class="main_low-box-common main_low-memo-box"></div>
+        <div class="main_low-box-common main_low-right-box"></div>
+      </div>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
