--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
   <body class="main_body main_body_backgroud">
     <div class="main_backgroud">
       <div class="main_high">
-        <div class="main_high-box-common main_high-profile-box"></div>
+        <div class="main_high-box-common main_high-profile-box">
+          <div class="main_high-profile-img-box">
+            <p></p>
+          </div>
+          <div class="main_high-profile-name-box">
+            <p></p>
+          </div>
+        </div>
         <div class="main_high-box-common main_high-time-day-box"></div>
         <div class="main_high-box-common main_high-music-box"></div>
       </div>
@@ -21,6 +28,7 @@
         <div class="main_low-box-common main_low-right-box"></div>
       </div>
     </div>
+    <script src="js/main-profile.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
