--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </form>
     </div>
 
-    <script src="js/welcome.js"></script>
-    <script src="js/feel.js"></script>
+    <script src="index-js/welcome.js"></script>
+    <script src="index-js/feel.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
