--- a/main.html
+++ b/main.html
@@ -15,10 +15,15 @@
             <p></p>
           </div>
           <div class="main_high-profile-name-box">
-            <p></p>
+            <h1></h1>
           </div>
         </div>
-        <div class="main_high-box-common main_high-time-day-box"></div>
+        <div class="main_high-box-common main_high-time-day-box">
+          <div class="main_high-timeday-box-common main_high-time-box">
+            <p>00:00:00</p>
+          </div>
+          <div class="main_high-timeday-box-common main_high-day-box"></div>
+        </div>
         <div class="main_high-box-common main_high-music-box"></div>
       </div>
       <div class="main_middle"></div>
@@ -28,7 +33,8 @@
         <div class="main_low-box-common main_low-right-box"></div>
       </div>
     </div>
-    <script src="js/main-profile.js"></script>
+    <script src="main-js/profile.js"></script>
+    <script src="main-js/time-day.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
