--- a/main.html
+++ b/main.html
@@ -22,7 +22,16 @@
           <div class="main_high-timeday-box-common main_high-time-box">
             <p>00:00:00</p>
           </div>
-          <div class="main_high-timeday-box-common main_high-day-box"></div>
+          <div class="main_high-timeday-box-common main_high-day-box">
+            <div class="main_high-month-date-box">
+              <div class="main_high-day">month</div>
+              <p class="main_high-day-common main_high-month">5</p>
+            </div>
+            <div class="main_high-month-date-box">
+              <div class="main_high-day">date</div>
+              <p class="main_high-day-common main_high-date"></p>
+            </div>
+          </div>
         </div>
         <div class="main_high-box-common main_high-music-box"></div>
       </div>
