--- a/main.html
+++ b/main.html
@@ -33,7 +33,23 @@
             </div>
           </div>
         </div>
-        <div class="main_high-box-common main_high-music-box"></div>
+        <div class="main_high-box-common main_high-music-box">
+          <div class="music-container">
+            <div class="music-info">
+              <h class="music-title">잔나비</h>
+              <div class="music-progress-container">
+                <div class="music-progress"></div>
+              </div>
+            </div>
+            <audio class="music-play" src="music/사랑하긴 했었나요.mp3"></audio>
+            <div class="music-img-container">
+              <img class="music-img" src="img/배경사진.jpg" />
+            </div>
+            <button class="music-btn">
+              <i class="fas fa-play"></i>
+            </button>
+          </div>
+        </div>
       </div>
       <div class="main_middle"></div>
       <div class="main_low">
@@ -44,6 +60,7 @@
     </div>
     <script src="main-js/profile.js"></script>
     <script src="main-js/time-day.js"></script>
+    <script src="main-js/music.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
