--- a/main.html
+++ b/main.html
@@ -41,7 +41,11 @@
                 <div class="music-progress"></div>
               </div>
             </div>
-            <audio class="music-play" src="music/사랑하긴 했었나요.mp3"></audio>
+            <audio
+              class="music-play"
+              onloadstart="this.volume=0.1"
+              src="music/사랑하긴 했었나요.mp3"
+            ></audio>
             <div class="music-img-container">
               <img class="music-img" src="img/배경사진.jpg" />
             </div>
