--- a/main.html
+++ b/main.html
@@ -37,6 +37,7 @@
           <div class="music-container">
             <div class="music-info">
               <h class="music-title">잔나비</h>
+              <p class="music-text">- 잔나비</p>
               <div class="music-progress-container">
                 <div class="music-progress"></div>
               </div>
@@ -55,7 +56,19 @@
           </div>
         </div>
       </div>
-      <div class="main_middle"></div>
+      <div class="main_middle">
+        <div class="main_middle-box"></div>
+        <div class="main_middle-text-box">
+          <p class="main_middle-text">ㄹㄴㅇㅁㄹ이ㅓㅁㄴ러만ㅇ</p>
+        </div>
+        <div class="main_middle-box">
+          <button class="main_middle-icon" style="cursor: pointer">
+            <i class="fas fa-leaf fa-sx"> </i>
+          </button>
+          <div class="main_middle-box-icon"></div>
+          <div class="main_middle-icon-right"></div>
+        </div>
+      </div>
       <div class="main_low">
         <div class="main_low-box-common main_low-left-box"></div>
         <div class="main_low-box-common main_low-memo-box"></div>
