--- a/main.html
+++ b/main.html
@@ -36,17 +36,15 @@
         <div class="main_high-box-common main_high-music-box">
           <div class="music-container">
             <div class="music-info">
-              <h class="music-title">잔나비</h>
-              <p class="music-text">- 잔나비</p>
+              <div class="music-title-text">
+                <h class="music-title">잔나비</h>
+                <p class="music-text">- 잔나비</p>
+              </div>
               <div class="music-progress-container">
                 <div class="music-progress"></div>
               </div>
             </div>
-            <audio
-              class="music-play"
-              onloadstart="this.volume=0.1"
-              src="music/사랑하긴 했었나요.mp3"
-            ></audio>
+            <audio class="music-play" onloadstart="this.volume=0.1"></audio>
             <div class="music-img-container">
               <img class="music-img" src="img/배경사진.jpg" />
             </div>
@@ -78,6 +76,7 @@
     <script src="main-js/profile.js"></script>
     <script src="main-js/time-day.js"></script>
     <script src="main-js/music.js"></script>
+    <script src="main-js/music-text.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
