--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
             </div>
             <audio class="music-play" onloadstart="this.volume=0.1"></audio>
             <div class="music-img-container">
-              <img class="music-img" src="img/배경사진.jpg" />
+              <img class="music-img" />
             </div>
             <button class="music-btn">
               <i class="fas fa-play"></i>
