--- a/main.html
+++ b/main.html
@@ -68,7 +68,15 @@
         </div>
       </div>
       <div class="main_low">
-        <div class="main_low-box-common main_low-left-box"></div>
+        <div class="main_low-box-common main_low-left-box">
+          <a class="main_low-left-img-box" href="index.html">
+            <img class="main_low-left-img" src="img/logout1.jpg" />
+          </a>
+          <div class="main_low-left-logout">
+            <p>Log Out</p>
+            <p class="main_low-left-logout-i"></p>
+          </div>
+        </div>
         <div class="main_low-box-common main_low-memo-box"></div>
         <div class="main_low-box-common main_low-right-box"></div>
       </div>
@@ -77,6 +85,7 @@
     <script src="main-js/time-day.js"></script>
     <script src="main-js/music.js"></script>
     <script src="main-js/music-text.js"></script>
+    <script src="main-js/logout.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
