--- a/main.html
+++ b/main.html
@@ -77,7 +77,39 @@
             <p class="main_low-left-logout-i"></p>
           </div>
         </div>
-        <div class="main_low-box-common main_low-memo-box"></div>
+        <div class="main_low-box-common main_low-memo-box">
+          <div class="main_low-memo-left">
+            <p>Memo</p>
+          </div>
+          <div class="main_low-memo-right">
+            <form class="main_low-memo-form">
+              <input
+                class="main_low-memo-input"
+                type="text"
+                placeholder="안녕하세요"
+                required
+              />
+              <button class="main_low-memo-btn">
+                <i class="fas fa-leaf"> </i>
+              </button>
+            </form>
+            <div class="main_low-memo-list-box">
+              <div class="main_low-memo-list">
+                <ul class="main_low-memo-text">
+                  안녕하세요
+                </ul>
+                <div class="main_low-memo-text-btn">
+                  <button>
+                    <i class="main_low-memo-text-i1 fas fa-check fa-xs"></i>
+                  </button>
+                  <button>
+                    <i class="main_low-memo-text-i2 far fa-trash-alt fa-sm"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="main_low-box-common main_low-right-box"></div>
       </div>
     </div>
