--- a/main.html
+++ b/main.html
@@ -93,21 +93,7 @@
                 <i class="fas fa-leaf"> </i>
               </button>
             </form>
-            <div class="main_low-memo-list-box">
-              <div class="main_low-memo-list">
-                <ul class="main_low-memo-text">
-                  안녕하세요
-                </ul>
-                <div class="main_low-memo-text-btn">
-                  <button>
-                    <i class="main_low-memo-text-i1 fas fa-check fa-xs"></i>
-                  </button>
-                  <button>
-                    <i class="main_low-memo-text-i2 far fa-trash-alt fa-sm"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
+            <ul class="main_low-memo-list-box"></ul>
           </div>
         </div>
         <div class="main_low-box-common main_low-right-box"></div>
@@ -118,6 +104,7 @@
     <script src="main-js/music.js"></script>
     <script src="main-js/music-text.js"></script>
     <script src="main-js/logout.js"></script>
+    <script src="main-js/memo.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
