--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@
               <input
                 class="main_low-memo-input"
                 type="text"
-                placeholder="안녕하세요"
+                placeholder="입력하세요."
                 required
               />
               <button class="main_low-memo-btn">
@@ -96,7 +96,11 @@
             <ul class="main_low-memo-list-box"></ul>
           </div>
         </div>
-        <div class="main_low-box-common main_low-right-box"></div>
+        <div class="main_low-box-common main_low-right-box">
+          <i class="weather"></i>
+          <p class="temp"></p>
+          <p class="city"></p>
+        </div>
       </div>
     </div>
     <script src="main-js/profile.js"></script>
@@ -105,6 +109,7 @@
     <script src="main-js/music-text.js"></script>
     <script src="main-js/logout.js"></script>
     <script src="main-js/memo.js"></script>
+    <script src="main-js/temp.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
