--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
-    <title>Document</title>
+    <title>Platanus</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="main_body main_body_backgroud">
