--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Platanus</title>
+    <meta property="og:image" content="" />
+    <meta property="og:title" content="Platanus" />
+    <meta property="og:description" content="Platanus에 잠시 쉬다가세요." />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="welcome_all_body">
