--- a/main.html
+++ b/main.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
     <title>Platanus</title>
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://news.nateimg.co.kr/orgImg/hi/2020/11/19/bc3dfc53-8ad7-4259-bdd8-769bab6eab2b.jpg"
+    />
+    <meta property="og:title" content="Platanus" />
+    <meta property="og:description" content="Platanus에서 잠시 쉬다 가세요." />
 
     <link rel="stylesheet" href="style.css" />
   </head>
